improved paginated collection items API documentation to show HAL HATEOAS representation in schemas for requests which concern list results
