# config/packages/nelmio_api_doc.yaml
@@ -13,7 +13,7 @@ nelmio_api_doc:
     documentation:
         info:
             title: BileMo API
-            description: Phone store for our partners!
+            description: "Phone store for our partners!"
             version: 1.0.0
         components:
             headers:
@@ -21,8 +21,9 @@ nelmio_api_doc:
                     description: "Resource link to view new client details thanks to Location header"
                     schema:
                         type: string
+                        format: url
                 content_type:
-                    description: "Resource and HAL HATEOAS data: JSON format application/hal+json"
+                    description: "Resource representation with HAL HATEOAS data: JSON format application/hal+json"
                     schema:
                         type: string
                 cache_control:
@@ -153,7 +154,7 @@ nelmio_api_doc:
                             example: 401
                         message:
                             type: string
-                            example: Invalid (Expired or Not found) JWT Token
+                            example: Invalid (or Expired) JWT Token
                 api_error_403:
                     description: "API error 403 JSON schema"
                     type: object
@@ -184,7 +185,184 @@ nelmio_api_doc:
                         message:
                             type: string
                             example: Technical error
-
+                # Collections
+                # example to represent them: https://opensource.zalando.com/restful-api-guidelines/#link-relation-fields
+                ## Client list
+                paginated_client_collection:
+                    description: "API paginated client collection JSON schema"
+                    type: object
+                    properties:
+                        page:
+                            description: "A page number to retrieve a particular set of clients"
+                            type: integer
+                        per_page:
+                            description: "A limit in order to define how many clients to show per page"
+                            type: integer
+                        pages:
+                            description: "The total page size (number) of sets"
+                            type: integer
+                        total:
+                            description: "The total client collection items size (number)"
+                            type: integer
+                        _links:
+                            description: "A set of links to reach client list data thanks to pagination"
+                            type: object
+                            properties:
+                                self:
+                                    description: "A link to reach current set of data"
+                                    type: string
+                                first:
+                                    description: "A link to reach first set of data"
+                                    type: string
+                                last:
+                                    description: "A link to reach last set of data"
+                                    type: string
+                                next:
+                                    description: "A link to reach next set of data"
+                                    type: string
+                                previous:
+                                    description: "A link to reach previous set of data"
+                                    type: string
+                        _embedded:
+                            description: "An array of client collection items"
+                            type: object
+                            properties:
+                                clients:
+                                    type: array
+                                    items:
+                                        $ref: "#/components/schemas/client_list_data"
+                ## Offer list
+                paginated_offer_collection:
+                    description: "API paginated offer collection JSON schema"
+                    type: object
+                    properties:
+                        page:
+                            description: "A page number to retrieve a particular set of offers"
+                            type: integer
+                        per_page:
+                            description: "A limit in order to define how many offers to show per page"
+                            type: integer
+                        pages:
+                            description: "The total page size (number) of sets"
+                            type: integer
+                        total:
+                            description: "The total offer collection items size (number)"
+                            type: integer
+                        _links:
+                            description: "A set of links to reach offer list data thanks to pagination"
+                            type: object
+                            properties:
+                                self:
+                                    description: "A link to reach current set of data"
+                                    type: string
+                                first:
+                                    description: "A link to reach first set of data"
+                                    type: string
+                                last:
+                                    description: "A link to reach last set of data"
+                                    type: string
+                                next:
+                                    description: "A link to reach next set of data"
+                                    type: string
+                                previous:
+                                    description: "A link to reach previous set of data"
+                                    type: string
+                        _embedded:
+                            description: "An array of offer collection items"
+                            type: object
+                            properties:
+                                offers:
+                                    type: array
+                                    items:
+                                        $ref: "#/components/schemas/offer_list_data"
+                ## Partner list
+                paginated_partner_collection:
+                    description: "API paginated partner collection JSON schema"
+                    type: object
+                    properties:
+                        page:
+                            description: "A page number to retrieve a particular set of partners"
+                            type: integer
+                        per_page:
+                            description: "A limit in order to define how many partners to show per page"
+                            type: integer
+                        pages:
+                            description: "The total page size (number) of sets"
+                            type: integer
+                        total:
+                            description: "The total partner collection items size (number)"
+                            type: integer
+                        _links:
+                            description: "A set of links to reach partner list data thanks to pagination"
+                            type: object
+                            properties:
+                                self:
+                                    description: "A link to reach current set of data"
+                                    type: string
+                                first:
+                                    description: "A link to reach first set of data"
+                                    type: string
+                                last:
+                                    description: "A link to reach last set of data"
+                                    type: string
+                                next:
+                                    description: "A link to reach next set of data"
+                                    type: string
+                                previous:
+                                    description: "A link to reach previous set of data"
+                                    type: string
+                        _embedded:
+                            description: "An array of partner collection items"
+                            type: object
+                            properties:
+                                partners:
+                                    type: array
+                                    items:
+                                        $ref: "#/components/schemas/partner_list_data"
+                ## Phone list
+                paginated_phone_collection:
+                    description: "API paginated phone collection JSON schema"
+                    type: object
+                    properties:
+                        page:
+                            description: "A page number to retrieve a particular set of phones"
+                            type: integer
+                        per_page:
+                            description: "A limit in order to define how many phones to show per page"
+                            type: integer
+                        pages:
+                            description: "The total page size (number) of sets"
+                            type: integer
+                        total:
+                            description: "The total phone collection items size (number)"
+                            type: integer
+                        _links:
+                            description: "A set of links to reach phone list data thanks to pagination"
+                            type: object
+                            properties:
+                                self:
+                                    description: "A link to reach current set of data"
+                                    type: string
+                                first:
+                                    description: "A link to reach first set of data"
+                                    type: string
+                                last:
+                                    description: "A link to reach last set of data"
+                                    type: string
+                                next:
+                                    description: "A link to reach next set of data"
+                                    type: string
+                                previous:
+                                    description: "A link to reach previous set of data"
+                                    type: string
+                        _embedded:
+                            description: "An array of phone collection items"
+                            type: object
+                            properties:
+                                phones:
+                                    type: array
+                                    items:
+                                        $ref: "#/components/schemas/phone_list_data"
         security:
             - Bearer: []
         servers:
